Adicionand metodo delete

--- a/requests.ipynb
+++ b/requests.ipynb
@@ -820,7 +820,7 @@
    "source": [
     "api_base_url = 'https://api.github.com'\n",
     "username = 'seu usuário'\n",
-    "repo = 'linguagens-utilizadas'\n",
+    "repo = 'repo desejado'\n",
     "path = 'amazon.csv'\n",
     "\n",
     "url = f'{api_base_url}/repos/{username}/{repo}/contents/{path}'\n",
